--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ body{
   height: var(--page-height);
   margin: 0;
   font-family: "Open Sans", sans-serif; 
-  font-weight: 300;
-  line-height: 1.3;
+  font-weight: 400;
+  line-height: 1.68;
   color: #444;
   hyphens: auto;
 }
@@ -327,6 +327,9 @@ li{
 .side-block{
   margin-top: 0.5in; 
 }
+.side-block li {
+  white-space: nowrap;
+}
 
 #contact ul{
   margin-top: 0.05in;
@@ -348,6 +351,9 @@ li{
 #skills ul{
   margin: 0.05in 0 0.15in;
   padding: 0;
+}
+#skills li {
+  white-space: normal;
 }
 
 #disclaimer{
